# interviews

./: .gitignore  advanced_decorators.py  angle_brackets.py  branch_length.py  cipher.py  codility.py  codility_example_test.py  codility_real.py  codility_toptal_01.py  codility_toptal_02.py  codility_toptal_03.py  common_letters.py  dicts_aggregating.py  employer_new.py  flip_dicts.py  height_of_tree.py  interview_zen.py  isomorphic_strings.py  pyproject.toml  rotate_array.py  staircase_problem.py  string_comparison_problem.py  string_filtering.py
advent-of-code/: taks_1.py  taks_3_1.py  task_2.py
advent-of-code/2024/: 1.py
check_mocking/: mocking.py
codlity/: binary_gap.py  demo_test.py  task1.py  task2.py
hackerrank/: odd_number.py  reverse_strings.py  sample.py
leetcode/: longest_chain_of_chars.py  minimaxsum.py  pair_with_target_sum.py  sorting_algorithms.py
odoo/: test_01.py  test_02.py  test_03.py
testdome/: category_tree.py  packages_problem.py  tuple_slicing.py
tests/: test_check_mocking.py
thecollective/: problem01.py
